# TJ_ComfyUI_Lineart2Vector

./: .gitignore  README.md  README_ja.md  SPECIFICATION.md  __init__.py  centerline_to_svg.py  line_region_detector.py  mask_cleanup.py  pyproject.toml  python_info.py  requirements.txt  svg_auto_reorder.py  svg_color_picker.py  svg_file_saver.py  svg_group_layout.py  svg_path_cleanup.py  svg_reorder.py  svg_style_editor.py  svg_style_editor_simple.py  svg_to_raster.py  svg_visibility.py
.github/workflows/: publish.yml
web/: tj_color_picker.js
web/extensions/: tj_color_picker.js
